2013-03-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events.build_table.php: Fixed the owner info
	in wrong column of event view for bug 3607097

	Fixed a problem changing the owner when change status too

2013-03-07  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.build_table.php: Added carriage
	return support in Instructions column in events view

2013-03-07  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_view_services.php,
	include/help/ja/help_field_match_snmp.php,
	include/help/ja/help_snmp_alert_field1.php: Updated help.

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_servers.php
	operation/agentes/estado_generalagente.php: Order
	code and little fix

	* operation/events/events.build_table.php
	godmode/events/custom_events.php: Add Instructions to
	custom columns in event view to bug 3607062

2013-03-06  Dario Rodriguez <dario@artica.es>

	* operation/agentes/ver_agente.php: Adapted to new way to detect
	if an agent is a VMware entity.

	MERGED FROM 4.0.3

2013-03-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_io.php, include/db/mysql.php: fixed warnings
	messages from PHP.
	
	Fixes: #3607014

2013-03-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/configurar_agente.php: fixed the lost ip in the
	audit when create the agent or module.

2013-03-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: added tip for
	to note the module have another module intervals in the life of this
	maybe the sumattory is not correct.

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/configure_alert_action.php: Put again
	a missed help hint for the action macros.

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php: Change the update counts 
	of fired alerts when validate to do it only when the validation