@@ -1,3 +1,15 @@
+2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/reporting/reporting_builder.php,
+	godmode/reporting/reporting_builder.item_editor.php: fixed the get
+	modules from items events for reports in metaconsole.
+	
+	Fixes: #3606284
+	
+	* include/functions_agents.php, operation/tree.php,
+	operation/agentes/ver_agente.php: some fixes for avoid PHP
+	warnings.
+
 2013-03-07  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_events.php
